--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1268,5 +1268,6 @@
         <file alias="devices_off">images/themed/tokenizable/Node Selector/Tabs OFF/devices_off.svg</file>
         <file alias="folder-users_off">images/themed/tokenizable/Node Selector/Tabs OFF/folder-users_off.svg</file>
         <file alias="trash_off">images/themed/tokenizable/Node Selector/Tabs OFF/trash_off.svg</file>
+        <file alias="x_solid_small">images/themed/tokenizable/x_solid_small.svg</file>
     </qresource>
 </RCC>
