--- a/src/MEGASync/gui/ui/SideBarTab.ui
+++ b/src/MEGASync/gui/ui/SideBarTab.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>72</width>
+    <width>106</width>
     <height>32</height>
    </rect>
   </property>
@@ -35,7 +35,9 @@
    <string notr="true"/>
   </property>
   <property name="styleSheet">
-   <string notr="true">SideBarTab
+   <string notr="true">/*ColorTokenIcon;Button;lClose;normal;off;colorToken.icon-primary*/
+
+SideBarTab
 {
 border-radius:6px;
 }
@@ -50,7 +52,7 @@ SideBarTab[selected=false]
 background-color:  transparent;
 }</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1,0">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1,0,0">
    <property name="spacing">
     <number>8</number>
    </property>
@@ -61,7 +63,7 @@ background-color:  transparent;
     <number>8</number>
    </property>
    <property name="rightMargin">
-    <number>12</number>
+    <number>8</number>
    </property>
    <property name="bottomMargin">
     <number>8</number>
@@ -138,8 +140,24 @@ background-color:  transparent;
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="QToolButton" name="lClose">
+     <property name="text">
+      <string notr="true"/>
+     </property>
+     <property name="icon">
+      <iconset resource="../Resources_common.qrc">
+       <normaloff>:/x_solid_small</normaloff>:/x_solid_small</iconset>
+     </property>
+     <property name="class" stdset="0">
+      <string notr="true">icon-label</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../Resources_common.qrc"/>
+ </resources>
  <connections/>
 </ui>
