--- a/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
@@ -35,6 +35,8 @@
 /*ColorTokenIcon;Custom;fBackups;normal;on;colorToken.icon-primary*/
 /*ColorTokenIcon;Custom;fRubbish;normal;off;colorToken.icon-secondary*/
 /*ColorTokenIcon;Custom;fRubbish;normal;on;colorToken.icon-primary*/
+/*ColorTokenIcon;Custom;fSearch;normal;off;colorToken.icon-secondary*/
+/*ColorTokenIcon;Custom;fSearch;normal;on;colorToken.icon-primary*/
 /********** LEFT MENU **********/ 
 
 #wStorage 
@@ -206,113 +208,13 @@ QGroupBox::title
            </property>
           </widget>
          </item>
-        </layout>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="wSearchNS">
-        <property name="title">
-         <string>Search</string>
-        </property>
-        <layout class="QVBoxLayout" name="wSearchLayout">
-         <property name="spacing">
-          <number>0</number>
-         </property>
-         <property name="leftMargin">
-          <number>4</number>
-         </property>
-         <property name="topMargin">
-          <number>24</number>
-         </property>
-         <property name="rightMargin">
-          <number>4</number>
-         </property>
-         <property name="bottomMargin">
-          <number>4</number>
-         </property>
-         <item alignment="Qt::AlignBottom">
-          <widget class="QFrame" name="fSearchStringNS">
-           <property name="focusPolicy">
-            <enum>Qt::StrongFocus</enum>
+         <item>
+          <widget class="SideBarTab" name="fSearch" native="true">
+           <property name="icon" stdset="0">
+            <iconset resource="../../../gui/Resources_common.qrc">
+             <normaloff>:/search_outline_small</normaloff>
+             <normalon>:/search_solid_small</normalon>:/search_outline_small</iconset>
            </property>
-           <property name="frameShape">
-            <enum>QFrame::NoFrame</enum>
-           </property>
-           <property name="frameShadow">
-            <enum>QFrame::Plain</enum>
-           </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_14">
-            <property name="spacing">
-             <number>0</number>
-            </property>
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <widget class="QPushButton" name="bSearchNS">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="cursor">
-               <cursorShape>PointingHandCursor</cursorShape>
-              </property>
-              <property name="text">
-               <string notr="true"/>
-              </property>
-              <property name="icon">
-               <iconset resource="../../../gui/Resources_common.qrc">
-                <normaloff>:/images/node_selector/sidebar/search_default.png</normaloff>:/images/node_selector/sidebar/search_default.png</iconset>
-              </property>
-              <property name="checkable">
-               <bool>true</bool>
-              </property>
-              <property name="autoDefault">
-               <bool>false</bool>
-              </property>
-              <property name="default_icon" stdset="0">
-               <string notr="true">qrc:/images/node_selector/sidebar/search_default.png</string>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup</string>
-              </attribute>
-             </widget>
-            </item>
-            <item>
-             <widget class="QToolButton" name="tClearSearchResultNS">
-              <property name="cursor">
-               <cursorShape>PointingHandCursor</cursorShape>
-              </property>
-              <property name="text">
-               <string/>
-              </property>
-              <property name="icon">
-               <iconset resource="../../../gui/Resources_common.qrc">
-                <normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>16</width>
-                <height>16</height>
-               </size>
-              </property>
-              <property name="default_icon" stdset="0">
-               <string notr="true">qrc:/images/transfer_manager/sidebar/delete_search_result_default.png</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
           </widget>
          </item>
         </layout>
@@ -361,7 +263,4 @@ QGroupBox::title
   <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections/>
- <buttongroups>
-  <buttongroup name="buttonGroup"/>
- </buttongroups>
 </ui>
