New label sizes
(cherry picked from commit d2240ab27ad84310e9f69412c6d96e0cd167c889)

--- a/src/MEGASync/gui/ui/CrashReportDialog.ui
+++ b/src/MEGASync/gui/ui/CrashReportDialog.ui
@@ -69,8 +69,11 @@
        <property name="wordWrap">
         <bool>true</bool>
        </property>
-       <property name="type" stdset="0">
-        <string notr="true">title</string>
+       <property name="dimension" stdset="0">
+        <string notr="true">body-2</string>
+       </property>
+       <property name="semibold" stdset="0">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
