Implement design feedback

--- a/src/MEGASync/gui/ui/AlertFilterType.ui
+++ b/src/MEGASync/gui/ui/AlertFilterType.ui
@@ -28,6 +28,9 @@
     <height>43</height>
    </size>
   </property>
+  <property name="cursor">
+   <cursorShape>PointingHandCursor</cursorShape>
+  </property>
   <property name="windowTitle">
    <string/>
   </property>
