--- a/src/MEGASync/transfers/gui/ui/InfoDialogTransfersWidget.ui
+++ b/src/MEGASync/transfers/gui/ui/InfoDialogTransfersWidget.ui
@@ -59,28 +59,7 @@
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">QScrollBar:vertical
-{
-    background: #f6f6f6;
-    width: 15px;
-    border-left: 1px solid #E4E4E4;
-}
-
-QScrollBar::sub-line:vertical, QScrollBar::add-line:vertical
-{
-    border: none;
-    background: none;
-    width:0px;
-    height:0px;
-}
-
-QScrollBar::handle:vertical
-{
-    background: #c0c0c0;
-    min-height: 20px;
-    border-radius: 4px;
-    margin: 3px 4px 3px 2px;
-}</string>
+      <string notr="true"/>
      </property>
      <property name="verticalScrollBarPolicy">
       <enum>Qt::ScrollBarAsNeeded</enum>
