--- a/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
@@ -14,14 +14,9 @@
    <string notr="true"/>
   </property>
   <property name="styleSheet">
-   <string notr="true">QToolButton
+   <string notr="true">#Container
 {
-border:none;
-}
-
-#Container
-{
-background-color: #FFFFFF;
+background-color: #FFFFFF; /*colorToken.page-background*/
 }
 
 #searchEmptyInfoWidget
@@ -95,34 +90,6 @@ min-height:32px;
         <property name="verticalSpacing">
          <number>8</number>
         </property>
-        <item row="0" column="12">
-         <widget class="SearchLineEdit" name="leSearch">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>155</width>
-            <height>32</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>155</width>
-            <height>32</height>
-           </size>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Plain</enum>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="10">
          <widget class="QLabel" name="lAccess">
           <property name="minimumSize">
@@ -378,6 +345,9 @@ min-height:32px;
           </property>
           <property name="text">
            <string notr="true">FolderName</string>
+          </property>
+          <property name="bold-2" stdset="0">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -859,12 +829,6 @@ min-height:32px;
    <class>NodeSelectorTreeView</class>
    <extends>QTreeView</extends>
    <header>node_selector/gui/NodeSelectorTreeView.h</header>
-  </customwidget>
-  <customwidget>
-   <class>SearchLineEdit</class>
-   <extends>QFrame</extends>
-   <header>node_selector/gui/SearchLineEdit.h</header>
-   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources>
