--- a/src/MEGASync/gui/ui/SideBarTab.ui
+++ b/src/MEGASync/gui/ui/SideBarTab.ui
@@ -31,6 +31,9 @@
   <property name="cursor">
    <cursorShape>PointingHandCursor</cursorShape>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::StrongFocus</enum>
+  </property>
   <property name="windowTitle">
    <string notr="true"/>
   </property>
